--- a/template.env
+++ b/template.env
@@ -1,5 +1,3 @@
 NODE_ENV = development
 PORT = 5000
-MONGO_URI = mongodb+srv://<username>:<password>@cluster0.cytcv.mongodb.net/matt-testing?retryWrites=true&w=majority
-
-
+MONGO_URI = mongodb+srv://<username>:<password>@cluster0.cytcv.mongodb.net/<collection-name>?retryWrites=true&w=majority
