--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.4"
+    "mongoose": "^6.2.4",
+    "node-schedule": "^2.1.0"
   },
   "devDependencies": {
     "jest": "^27.5.1",
