--- a/template.env
+++ b/template.env
@@ -2,3 +2,4 @@ NODE_ENV = development
 PORT = 5000
 MONGO_URI = mongodb+srv://<username>:<password>@cluster0.cytcv.mongodb.net/<collection-name>?retryWrites=true&w=majority
 JWT_SECRET = <secret>
+RECIPE_API = <edamam-api-link>
