--- a/.github/workflows/CI-express-workflow.js.yml
+++ b/.github/workflows/CI-express-workflow.js.yml
@@ -27,5 +27,6 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
-      – name: Create mongoDB Docker container      run: sudo docker run -d -p 27017:27017 mongo:latest
+      – name: Create mongoDB Docker container      
+      - run: sudo docker run -d -p 27017:27017 mongo:latest
       - run: npm test
