--- a/.github/workflows/CI-express-workflow.js.yml
+++ b/.github/workflows/CI-express-workflow.js.yml
@@ -29,3 +29,5 @@ jobs:
       - run: npm run build --if-present     
       - run: sudo docker run -d -p 27017:27017 mongo:latest
       - run: npm test
+        env: # Or as an environment variable
+        JWT_TOKEN: ${{ secrets.JWT_TOKEN }}
