--- a/.github/workflows/CI-express-workflow.js.yml
+++ b/.github/workflows/CI-express-workflow.js.yml
@@ -26,5 +26,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm ci
-      - run: npm run build --if-present
+      - run: npm run build --if-present     
+      - run: sudo docker run -d -p 27017:27017 mongo:latest
       - run: npm test
+        env:
+         JWT_SECRET: ${{ secrets.SECRET }}
