--- a/.github/workflows/CI-express-workflow.js.yml
+++ b/.github/workflows/CI-express-workflow.js.yml
@@ -30,4 +30,4 @@ jobs:
       - run: sudo docker run -d -p 27017:27017 mongo:latest
       - run: npm test
         env:
-         JWT_SECRET: ${{ secrets.SECRET }}
+         JWT_SECRET: ${{ secrets.JWT_SECRET }}
